# xdp-srv6-reverser

./: Makefile
src/: CMakeLists.txt  common.h  srv6_reverser_kern.c  xdp-srv6-reverser.c
